--- a/catalog/templates/goods.html
+++ b/catalog/templates/goods.html
@@ -1,5 +1,5 @@
-<!doctype html>
 {% load static %}
+<!doctype html>
 <html lang="ru" data-bs-theme="auto">
   <head><script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=BonHaT0Y_pvysdTSuAFjGuHavTGrpMR3Luub0KyZ7ZAOAxDf2hcbwWOUaX5uU0KA4i_arS2ibf-iLj90OlcVR6ffxZFedyiq65xC6n9IkIY" charset="UTF-8"></script><script src="{% static 'js/color-modes.js' %}"></script>
 
@@ -12,11 +12,9 @@
 
     <link rel="canonical" href="https://getbootstrap.su/docs/5.3/examples/album/">
 
-
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
