--- a/catalog/templates/goods.html
+++ b/catalog/templates/goods.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'admin/css/bootstrap.min.css' %}">
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -241,7 +241,7 @@
     <p class="mb-0">Новое в Bootstrap? <a href="/">Посетите домашнюю страницу</a> или прочтите наше <a href="/docs/5.3/getting-started/introduction/">руководство по началу работы</a>.</p>
   </div>
 </footer>
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'admin/js/bootstrap.bundle.min.js' %}"></script>
 
     </body>
 </html>
