--- a/catalog/templates/product.html
+++ b/catalog/templates/product.html
@@ -6,7 +6,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ prod.photo | media_filter}}">
+            <img src="{{ prod.preview | media_filter}}">
             <div class="card-body">
               <p class="card-text">Название: {{ prod.name }} </p>
               <p class="card-text">Описание: {{ prod.description }} </p>
