--- a/catalog/templates/goods.html
+++ b/catalog/templates/goods.html
@@ -161,7 +161,7 @@
 
 
 <header data-bs-theme="dark">
-{% includes 'includes/inc_menu.html' %}
+{% include 'includes/inc_menu.html' %}
 </header>
 
 <main>
