--- a/catalog/templates/product_list.html
+++ b/catalog/templates/product_list.html
@@ -7,9 +7,9 @@
         {% for prod in product %}
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ prod.photo | media_filter}}">
+            <img src="{{ prod.preview | media_filter}}">
             <div class="card-body">
-              <p class="card-text">{{ prod.name }} maxlength=100</p>
+              <p class="card-text">{{ prod.name |truncatechars:100 }} </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product' prod.pk %}" role="button">Подробная информация</a>
