--- a/catalog/templates/product.html
+++ b/catalog/templates/product.html
@@ -6,17 +6,16 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ prod.preview | media_filter}}">
+            <img src="{{ product.preview | media_filter }}">
             <div class="card-body">
-              <p class="card-text">Название: {{ prod.name }} </p>
-              <p class="card-text">Описание: {{ prod.description }} </p>
-              <p class="card-text">Категория: {{ prod.category }} </p>
-              <p class="card-text">Цена: {{ prod.price }} </p>
-               <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
+              <p class="card-text">{{ product.name | truncatechars:100 }} </p>
+              <p class="card-text">{{ product.category }} </p>
+              <p class="card-text">{{ product.price }} руб </p>
+              <p class="card-text">{{ product.name | truncatechars:100 }} </p>
+
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Смотреть</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
                 </div>
                 <small class="text-body-secondary">9 мин</small>
               </div>
