--- a/catalog/templates/catalog/goods.html
+++ b/catalog/templates/catalog/goods.html
@@ -161,7 +161,7 @@
 
 
 <header data-bs-theme="dark">
-{% include 'includes/inc_menu.html' %}
+{% include 'catalog/includes/inc_menu.html' %}
 </header>
 
 <main>
@@ -172,8 +172,8 @@
         <h1 class="fw-light">Список товаров</h1>
         <p class="lead text-body-secondary">Товары в магазине</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Главный призыв к действию</a>
-          <a href="#" class="btn btn-secondary my-2">Вторичное действие</a>
+          <a href="/product_list/" class="btn btn-primary my-2">Перейти к списку товаров</a>
+          <a href="{% url 'catalog:product_create' %}" class="btn btn-secondary my-2">Создать товар</a>
         </p>
       </div>
     </div>
