--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,4 @@
-{% extends 'goods.html' %}
+{% extends 'catalog/goods.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
@@ -6,12 +6,12 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ product.preview | media_filter }}">
+            <img src="{{ object.preview | media_filter }}">
             <div class="card-body">
-              <p class="card-text">{{ product.name | truncatechars:100 }} </p>
-              <p class="card-text">{{ product.category }} </p>
-              <p class="card-text">{{ product.price }} руб </p>
-              <p class="card-text">{{ product.name | truncatechars:100 }} </p>
+              <p class="card-text">{{ object.name | truncatechars:100 }} </p>
+              <p class="card-text">{{ object.category }} </p>
+              <p class="card-text">{{ object.price }} руб </p>
+              <p class="card-text">{{ object.name | truncatechars:100 }} </p>
 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
