--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,10 +1,10 @@
-{% extends 'goods.html' %}
+{% extends 'catalog/goods.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for prod in product %}
+        {% for prod in object_list %}
         <div class="col">
           <div class="card shadow-sm">
             <img src="{{ prod.preview | media_filter}}">
@@ -13,6 +13,8 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product' prod.pk %}" role="button">Подробная информация</a>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_update' prod.pk %}" role="button">Редактировать</a>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_delete' prod.pk %}" role="button">Удалить</a>
                 </div>
                 <small class="text-body-secondary">9 мин</small>
               </div>
