--- a/blogs/templates/blog_pages/blogpost_main_page.html
+++ b/blogs/templates/blog_pages/blogpost_main_page.html
@@ -172,8 +172,8 @@
         <h1 class="fw-light">Список товаров</h1>
         <p class="lead text-body-secondary">Товары в магазине</p>
         <p>
-          <a href="/product_list/" class="btn btn-primary my-2">Перейти к списку товаров</a>
-          <a href="{% url 'catalog:product_create' %}" class="btn btn-secondary my-2">Создать товар</a>
+          <a href="/blogpost_list/" class="btn btn-primary my-2">Перейти к списку товаров</a>
+          <a href="{% url 'blog_pages:blogpost_create' %}" class="btn btn-secondary my-2">Создать товар</a>
         </p>
       </div>
     </div>
