--- a/blogs/templates/blog_pages/blogpost_confirm_delete.html
+++ b/blogs/templates/blog_pages/blogpost_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'blog_pages/blog_main_page.html' %}
+{% extends 'blog_pages/blogpost_main_page.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
             {% csrf_token %}
           </div>
           <button type="submit" class="btn btn-primary">Удалить</button>
-          <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Отмена</a>
+          <a class="btn btn-primary" href="{% url 'blog_pages:blog_list' %}" role="button">Отмена</a>
         </div>
       </form>
     </div>
