--- a/blogs/templates/blog_pages/blogpost_detail.html
+++ b/blogs/templates/blog_pages/blogpost_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog_pages/blog_main_page.html' %}
+{% extends 'blog_pages/blogpost_main_page.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
@@ -8,14 +8,14 @@
           <div class="card shadow-sm">
             <img src="{{ object.preview | media_filter }}">
             <div class="card-body">
-              <p class="card-text">{{ object.name | truncatechars:100 }} </p>
-              <p class="card-text">{{ object.category }} </p>
-              <p class="card-text">{{ object.price }} руб </p>
-              <p class="card-text">{{ object.name | truncatechars:100 }} </p>
+              <p class="card-text">{{ object.title | truncatechars:100 }} </p>
+              <p class="card-text">{{ object.slug }} </p>
+              <p class="card-text">{{ object.description }} </p>
+              <p class="card-text">{{ publication.name | }} </p>
 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Назад</a>
+                  <a class="btn btn-primary" href="{% url 'blog_pages:blog_list' %}" role="button">Назад</a>
                 </div>
                 <small class="text-body-secondary">9 мин</small>
               </div>
