--- a/blogs/templates/blog_pages/blogpost_list.html
+++ b/blogs/templates/blog_pages/blogpost_list.html
@@ -1,4 +1,4 @@
-{% extends 'blog_pages/blog_main_page.html' %}
+{% extends 'blog_pages/blogpost_main_page.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
@@ -9,12 +9,12 @@
           <div class="card shadow-sm">
             <img src="{{ post.preview | media_filter}}">
             <div class="card-body">
-              <p class="card-text">{{ post.name | truncatechars:100 }} </p>
+              <p class="card-text">{{ post.title | truncatechars:100 }} </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a class="btn btn-primary" href="{% url 'catalog:product' post.pk %}" role="button">Подробная информация</a>
-                  <a class="btn btn-primary" href="{% url 'catalog:product_update' post.pk %}" role="button">Редактировать</a>
-                  <a class="btn btn-primary" href="{% url 'catalog:product_delete' post.pk %}" role="button">Удалить</a>
+                  <a class="btn btn-primary" href="{% url 'blog_pages:post' post.pk %}" role="button">Подробная информация</a>
+                  <a class="btn btn-primary" href="{% url 'blog_pages:blog_update' post.pk %}" role="button">Редактировать</a>
+                  <a class="btn btn-primary" href="{% url 'blog_pages:blog_delete' post.pk %}" role="button">Удалить</a>
                 </div>
                 <small class="text-body-secondary">9 мин</small>
               </div>
