--- a/blogs/templates/blogs/blogpost_main_page.html
+++ b/blogs/templates/blogs/blogpost_main_page.html
@@ -161,7 +161,7 @@
 
 
 <header data-bs-theme="dark">
-{% include 'blog_pages/includes/inc_menu.html' %}
+{% include 'blogs/includes/inc_menu.html' %}
 </header>
 
 <main>
@@ -169,11 +169,11 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Список товаров</h1>
-        <p class="lead text-body-secondary">Товары в магазине</p>
+        <h1 class="fw-light">Блог магазина</h1>
+        <p class="lead text-body-secondary">Добро пожаловать</p>
         <p>
-          <a href="/blogpost_list/" class="btn btn-primary my-2">Перейти к списку товаров</a>
-          <a href="{% url 'blog_pages:blogpost_create' %}" class="btn btn-secondary my-2">Создать товар</a>
+          <a href="/blogpost_list/" class="btn btn-primary my-2">Читать посты</a>
+          <a href="{% url 'blogs:blogpost_create' %}" class="btn btn-secondary my-2">Создать пост</a>
         </p>
       </div>
     </div>
