--- a/blogs/templates/blogs/includes/inc_menu.html
+++ b/blogs/templates/blogs/includes/inc_menu.html
@@ -8,9 +8,9 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Навигация</h4>
           <ul class="list-unstyled">
-
+            <li><a href="{% url 'catalog:goods' %}" class="text-white">Главная</a></li>
             <li><a href="#" class="text-white">Вход</a></li>
-            <li><a href="#" class="text-white">Напишите мне</a></li>
+            <li><a href="{% url 'blogs:blogpost_main_page' %}" class="text-white">Блог</a></li>
           </ul>
         </div>
       </div>
