--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -2,24 +2,34 @@
 {% load my_tags %}
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-6">
-      <form class="row" method="post" enctype="multipart/form-data">
-        <div class="card">
-          <div class="card-body">
-            {% csrf_token %}
-            {{ form.as_p }}
+  <form class="row" method="post" enctype="multipart/form-data">
+    <div class="row">
+      <div class="col-6">
+          <div class="card">
+            <div class="card-body">
+              {% csrf_token %}
+              {{ form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary">
+              {% if object %}
+              Сохранить
+              {% else %}
+              Создать
+              {% endif %}
+            </button>
           </div>
-          <button type="submit" class="btn btn-primary">
-            {% if object %}
-            Сохранить
-            {% else %}
-            Создать
-            {% endif %}
-          </button>
-        </div>
-      </form>
+      </div>
+      <div class="col-6">
+          <div class="card">
+            <div class="card-body">
+              {{ formset.management_form }}
+              {% for form in formset.forms %}
+              {{ form.as_p }}
+              {% endfor %}
+            </div>
+          </div>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
 {% endblock %}
