--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -10,6 +10,17 @@
             <img src="{{ prod.preview | media_filter}}">
             <div class="card-body">
               <p class="card-text">{{ prod.name | truncatechars:100 }} </p>
+              <p class="card-text"> Просмотров: {{ prod.views_counter }} </p>
+              <div class="card-footer">
+                {% if prod.version.all %}
+                  {% for version in product.version.all %}
+                    {% if version.current_version == True %}
+                    версии: {{version.version_name}}, номер версии: {{version.version_number}}
+                    {% else %}
+                    версия "{{version.version_name}}" не активна
+                    {% endif %}
+                  {% endfor %}
+                {% endif %}</div>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product' prod.pk %}" role="button">Подробная информация</a>
