--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -11,16 +11,16 @@
             <div class="card-body">
               <p class="card-text">{{ prod.name | truncatechars:100 }} </p>
               <p class="card-text"> Просмотров: {{ prod.views_counter }} </p>
-              <div class="card-footer">
-                {% if prod.version.all %}
-                  {% for version in product.version.all %}
-                    {% if version.current_version == True %}
-                    версии: {{version.version_name}}, номер версии: {{version.version_number}}
-                    {% else %}
-                    версия "{{version.version_name}}" не активна
-                    {% endif %}
-                  {% endfor %}
-                {% endif %}</div>
+               <p class="card-footer">
+                        {% if prod.active_version != 'Нет активной версии'%}
+                        Версия: {{ prod.active_version }}
+                        {% else %}
+                        {{ prod.active_version }}
+                        {% endif %}
+                        {% if prod.number_version %}
+                        - {{ prod.number_version }}
+                        {% endif %}
+                    </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product' prod.pk %}" role="button">Подробная информация</a>
