--- a/catalog/templates/catalog/goods.html
+++ b/catalog/templates/catalog/goods.html
@@ -21,6 +21,7 @@
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="icon" href="data:;base64,=">
 <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
@@ -173,7 +174,9 @@
         <p class="lead text-body-secondary">Товары в магазине</p>
         <p>
           <a href="/product_list/" class="btn btn-primary my-2">Перейти к списку товаров</a>
+          {% if user.is_authenticated %}
           <a href="{% url 'catalog:product_create' %}" class="btn btn-secondary my-2">Создать товар</a>
+          {% endif %}
         </p>
       </div>
     </div>
