--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -12,6 +12,7 @@
               <p class="card-text">{{ object.category }} </p>
               <p class="card-text">{{ object.price }} руб </p>
               <p class="card-text"> Просмотров: {{ object.views_counter }} </p>
+              <p class="card-text">{{ object.owner }} </p>
               <h1>{{ version_number }}</h1>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
