--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -13,6 +13,9 @@
             <button type="submit" class="btn btn-primary">
                 Войти
             </button>
+            <button type="submit" class="btn btn-primary">
+                <a href="{% url 'users:password_reset' %}">Сбросить пароль</a>
+            </button>
           </div>
       </div>
   </form>
