--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -13,8 +13,8 @@
             <button type="submit" class="btn btn-primary">
                 Войти
             </button>
-            <button type="submit" class="btn btn-primary">
-                <a href="{% url 'users:password_reset' %}">Сбросить пароль</a>
+            <button type="submit" class="btn btn-primary"> Сбросить пароль
+                <a href=""></a>
             </button>
           </div>
       </div>
